--- a/app/views/hybrid_bills/index.haml
+++ b/app/views/hybrid_bills/index.haml
@@ -52,9 +52,10 @@
     %ol.list--block
 
       %li
-        .list--details
-          %h3= link_to(("#{t('hybrid_bills.hs2_ap')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"), hybrid_bill_path('2'))
-          %p= t('hybrid_bills.id2.petition_status_pre')
+        .card
+          .card__details
+            %h3= link_to(("#{t('hybrid_bills.hs2_ap')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"), hybrid_bill_path('2'))
+            %p= t('hybrid_bills.id2.petition_status_pre')
 
 %section
   .container
@@ -63,6 +64,7 @@
     %ol.list--block
 
       %li
-        .list--details
-          %h3= link_to(("#{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"), hybrid_bill_path('1'))
-          %p= t('hybrid_bills.id1.petition_status_post')
+        .card
+          .card__details
+            %h3= link_to(("#{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"), hybrid_bill_path('1'))
+            %p= t('hybrid_bills.id1.petition_status_post')
