--- a/app/views/hybrid_bills/steps/forms/components/_petitioner-type.haml
+++ b/app/views/hybrid_bills/steps/forms/components/_petitioner-type.haml
@@ -4,34 +4,38 @@
   .block--border__bottom
     %ol.list--block
       %li
-        .list--details
-          .input-group__verbose
-            = radio_button_tag 'type', 'individual', checked: true
-            = label_tag 'type_individual', t('hybrid_bills.individual').capitalize
-          %p{ aria: { labelledby: 'type_individual' } }
-            = t('hybrid_bills.individual_desc')
+        .card
+          .card__details
+            .input-group__verbose
+              = radio_button_tag 'type', 'individual', checked: true
+              = label_tag 'type_individual', t('hybrid_bills.individual').capitalize
+            %p{ aria: { labelledby: 'type_individual' } }
+              = t('hybrid_bills.individual_desc')
       %li
-        .list--details
-          .input-group__verbose
-            = radio_button_tag 'type', 'individualgroup'
-            = label_tag 'type_individualgroup', t('hybrid_bills.group_individuals').capitalize
-          %p{ aria: { labelledby: 'type_individualgroup' } }
-            = t('hybrid_bills.group_individuals_desc')
+        .card
+          .card__details
+            .input-group__verbose
+              = radio_button_tag 'type', 'individualgroup'
+              = label_tag 'type_individualgroup', t('hybrid_bills.group_individuals').capitalize
+            %p{ aria: { labelledby: 'type_individualgroup' } }
+              = t('hybrid_bills.group_individuals_desc')
 
     %ol.list--block
       %li
-        .list--details
-          .input-group__verbose
-            = radio_button_tag 'type', 'organisation'
-            = label_tag 'type_organisation', t('hybrid_bills.organisation').capitalize
-          %p{ aria: { labelledby: 'type_organisation' } }
-            = t('hybrid_bills.organisation_desc')
+        .card
+          .card__details
+            .input-group__verbose
+              = radio_button_tag 'type', 'organisation'
+              = label_tag 'type_organisation', t('hybrid_bills.organisation').capitalize
+            %p{ aria: { labelledby: 'type_organisation' } }
+              = t('hybrid_bills.organisation_desc')
       %li
-        .list--details
-          .input-group__verbose
-            = radio_button_tag 'type', 'organisationgroup'
-            = label_tag 'type_organisationgroup', t('hybrid_bills.group_organisations').capitalize
-          %p{ aria: { labelledby: 'type_organisationgroup' } }
-            = t('hybrid_bills.group_organisations_desc')
+        .card
+          .card__details
+            .input-group__verbose
+              = radio_button_tag 'type', 'organisationgroup'
+              = label_tag 'type_organisationgroup', t('hybrid_bills.group_organisations').capitalize
+            %p{ aria: { labelledby: 'type_organisationgroup' } }
+              = t('hybrid_bills.group_organisations_desc')
 
   = submit_tag t('user_forms.next_button').capitalize, class: 'btn--primary'
