--- a/app/views/parties/show.html.haml
+++ b/app/views/parties/show.html.haml
@@ -7,9 +7,10 @@
     .container
       %ul.list--block
         %li
-          .list--details
-            %h2= link_to("#{t('current').capitalize} #{t('member_plural')}", party_members_current_path(@party.graph_id))
-            %p= "#{t('view_all').capitalize} #{t('current')} #{@party.name} #{t('member_plural')}"
+          .card
+            .card__details
+              %h2= link_to("#{t('current').capitalize} #{t('member_plural')}", party_members_current_path(@party.graph_id))
+              %p= "#{t('view_all').capitalize} #{t('current')} #{@party.name} #{t('member_plural')}"
 
 - else
   %section
@@ -18,5 +19,6 @@
         %p= t('.party_no_current_members')
       %ul.list--block
         %li
-          .list--details
-            %h2= link_to("#{t('view_all').capitalize} #{t('former')} #{@party.name} #{t('member_plural')}", party_members_path(@party.graph_id))
+          .card
+            .card__details
+              %h2= link_to("#{t('view_all').capitalize} #{t('former')} #{@party.name} #{t('member_plural')}", party_members_path(@party.graph_id))
