--- a/app/views/people/_current_role.html.haml
+++ b/app/views/people/_current_role.html.haml
@@ -1,11 +1,12 @@
 %li
-  .list--details
-    %h3.milli= role_type
-    %h4= role_title
-    - if role.try(:nodes)
-      %p= "Elected #{role.nodes.count} times"
-      %ul
-        - role.nodes.each do |node|
-          %li= "#{node.date_range}"
-    - else
-      %p= "#{role.date_range}"
+  .card
+    .card__details
+      %h3.milli= role_type
+      %h4= role_title
+      - if role.try(:nodes)
+        %p= "Elected #{role.nodes.count} times"
+        %ul
+          - role.nodes.each do |node|
+            %li= "#{node.date_range}"
+      - else
+        %p= "#{role.date_range}"
