--- a/app/views/collections/_root_collection.html.haml
+++ b/app/views/collections/_root_collection.html.haml
@@ -6,15 +6,17 @@
 %section{ id: 'content', tabindex: '0' }
   .container
     %h2= t('.in_this_section')
-    %ul.list--block__inline-50
+    %ul.list--block.list--2
       - collection.articles.each do |article|
         %li
-          .list--details
-            %h3= link_to(sanitize(article.article_title), article_path(article.graph_id))
-            = Parliament::Utils::Helpers::MarkdownHelper.markdown(article.article_summary)
+          .card
+            .card__details
+              %h3= link_to(sanitize(article.article_title), article_path(article.graph_id))
+              = Parliament::Utils::Helpers::MarkdownHelper.markdown(article.article_summary)
 
       - collection.subcollections.each do |subcollection|
         %li
-          .list--details
-            %h3= link_to(sanitize(subcollection.name), collection_path(subcollection.graph_id))
-            = Parliament::Utils::Helpers::MarkdownHelper.markdown(subcollection.description)
+          .card
+            .card__details
+              %h3= link_to(sanitize(subcollection.name), collection_path(subcollection.graph_id))
+              = Parliament::Utils::Helpers::MarkdownHelper.markdown(subcollection.description)
