--- a/app/views/houses/show.html.haml
+++ b/app/views/houses/show.html.haml
@@ -9,23 +9,28 @@
     %ul.list--block
       - if Parliament::Utils::Helpers::HousesHelper.commons?(@house)
         %li
-          .list--details
-            %h2= link_to("#{t('mp_plural')}", house_members_current_a_z_letter_path(@house.graph_id, 'a'))
-            %p= "#{t('all').capitalize} #{t('current')} #{t('member_plural')} #{t('of_the')} #{@house.name}."
+          .card
+            .card__details
+              %h2= link_to("#{t('mp_plural')}", house_members_current_a_z_letter_path(@house.graph_id, 'a'))
+              %p= "#{t('all').capitalize} #{t('current')} #{t('member_plural')} #{t('of_the')} #{@house.name}."
         %li
-          .list--details
-            %h2= link_to("#{t('party_plural').capitalize}", house_parties_current_path(@house.graph_id))
-            %p= "#{t('all').capitalize} #{t('current')} #{t('party_plural')} #{t('in_the')} #{@house.name}."
+          .card
+            .card__details
+              %h2= link_to("#{t('party_plural').capitalize}", house_parties_current_path(@house.graph_id))
+              %p= "#{t('all').capitalize} #{t('current')} #{t('party_plural')} #{t('in_the')} #{@house.name}."
         %li
-          .list--details
-            %h2= link_to("#{t('constituency_plural').capitalize}", constituencies_current_a_z_letter_path('a'))
-            %p= "#{t('find').capitalize} #{t('mp_plural')} #{t('.area_they_represent')}."
+          .card
+            .card__details
+              %h2= link_to("#{t('constituency_plural').capitalize}", constituencies_current_a_z_letter_path('a'))
+              %p= "#{t('find').capitalize} #{t('mp_plural')} #{t('.area_they_represent')}."
       - else
         %li
-          .list--details
-            %h2= link_to("#{t('lord_plural')}", house_members_current_a_z_letter_path(@house.graph_id, 'a'))
-            %p= "#{t('all').capitalize} #{t('current')} #{t('member_plural')} #{t('of_the')} #{@house.name}."
+          .card
+            .card__details
+              %h2= link_to("#{t('lord_plural')}", house_members_current_a_z_letter_path(@house.graph_id, 'a'))
+              %p= "#{t('all').capitalize} #{t('current')} #{t('member_plural')} #{t('of_the')} #{@house.name}."
         %li
-          .list--details
-            %h2= link_to("#{t('parties_and_groups').capitalize}", house_parties_current_path(@house.graph_id))
-            %p= "#{t('all').capitalize} #{t('current')} #{t('parties_and_groups')} #{t('in_the')} #{@house.name}."
+          .card
+            .card__details
+              %h2= link_to("#{t('parties_and_groups').capitalize}", house_parties_current_path(@house.graph_id))
+              %p= "#{t('all').capitalize} #{t('current')} #{t('parties_and_groups')} #{t('in_the')} #{@house.name}."
