--- a/app/views/media/show.html.haml
+++ b/app/views/media/show.html.haml
@@ -32,23 +32,26 @@
       %h2= t('.portraits_heading')
       %ol.list--pipe
         %li
-          %figure
-            %picture
-              %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=MCU_3:2&width=260&quality=80", alt: "#{@person.display_name} #{t('.alt_text_wide_portrait')}" }
-          .list--details
-            %h3= t('.download_heading_1')
-            = link_to(t('.download_jpeg').capitalize + ' ' + t('.download_res_wide_portrait'), "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=MCU_3:2&quality=80&download=true", class: 'btn--primary', 'aria-label': "Download " + t('.download_heading_1') + " of #{@person.display_name} " + t('.alt_text_wide_portrait'), download: '')
+          .card--large
+            %figure
+              %picture
+                %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=MCU_3:2&width=260&quality=80", alt: "#{@person.display_name} #{t('.alt_text_wide_portrait')}" }
+            .card__details
+              %h3= t('.download_heading_1')
+              = link_to(t('.download_jpeg').capitalize + ' ' + t('.download_res_wide_portrait'), "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=MCU_3:2&quality=80&download=true", class: 'btn--primary', 'aria-label': "Download " + t('.download_heading_1') + " of #{@person.display_name} " + t('.alt_text_wide_portrait'), download: '')
         %li
-          %figure
-            %picture
-              %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=MCU_3:4&width=260&quality=80", alt: "#{@person.display_name} #{t('.alt_text_portrait')}" }
-          .list--details
-            %h3= t('.download_heading_2')
-            = link_to(t('.download_jpeg').capitalize + ' ' + t('.download_res_portrait'), "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=MCU_3:4&quality=80&download=true", class: 'btn--primary', 'aria-label': "Download " + t('.download_heading_2') + " of #{@person.display_name} " + t('.alt_text_portrait'), download: '')
+          .card--large
+            %figure
+              %picture
+                %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=MCU_3:4&width=260&quality=80", alt: "#{@person.display_name} #{t('.alt_text_portrait')}" }
+            .card__details
+              %h3= t('.download_heading_2')
+              = link_to(t('.download_jpeg').capitalize + ' ' + t('.download_res_portrait'), "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=MCU_3:4&quality=80&download=true", class: 'btn--primary', 'aria-label': "Download " + t('.download_heading_2') + " of #{@person.display_name} " + t('.alt_text_portrait'), download: '')
         %li
-          %figure
-            %picture
-              %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=CU_1:1&width=260&quality=80", alt: "#{@person.display_name} #{t('.alt_text_thumbnail')}" }
-          .list--details
-            %h3= t('.download_heading_3')
-            = link_to(t('.download_jpeg').capitalize + ' ' + t('.download_res_thumbnail'), "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=CU_1:1&quality=80&download=true", class: 'btn--primary', 'aria-label': "Download " + t('.download_heading_3') + " of #{@person.display_name} " + t('.alt_text_thumbnail'), download: '')
+          .card--large
+            %figure
+              %picture
+                %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=CU_1:1&width=260&quality=80", alt: "#{@person.display_name} #{t('.alt_text_thumbnail')}" }
+            .card__details
+              %h3= t('.download_heading_3')
+              = link_to(t('.download_jpeg').capitalize + ' ' + t('.download_res_thumbnail'), "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=CU_1:1&quality=80&download=true", class: 'btn--primary', 'aria-label': "Download " + t('.download_heading_3') + " of #{@person.display_name} " + t('.alt_text_thumbnail'), download: '')
