--- a/app/views/parliaments/houses/parties/show.html.haml
+++ b/app/views/parliaments/houses/parties/show.html.haml
@@ -9,5 +9,6 @@
   .container
     %ul.list--block
       %li
-        .list--details
-          %h2= link_to(t('mps_and_lords'), parliament_house_party_members_path(@parliament.graph_id, @house.graph_id, @party.graph_id))
+        .card
+          .card__details
+            %h2= link_to(t('mps_and_lords'), parliament_house_party_members_path(@parliament.graph_id, @house.graph_id, @party.graph_id))
