--- a/app/views/parliaments/parties/show.html.haml
+++ b/app/views/parliaments/parties/show.html.haml
@@ -8,5 +8,6 @@
   .container
     %ul.list--block
       %li
-        .list--details
-          %h2= link_to(t('mps_and_lords'), parliament_party_members_path(@parliament.graph_id, @party.graph_id))
+        .card
+          .card__details
+            %h2= link_to(t('mps_and_lords'), parliament_party_members_path(@parliament.graph_id, @party.graph_id))
