--- a/app/views/shared/article/_aside_block.html.haml
+++ b/app/views/shared/article/_aside_block.html.haml
@@ -4,12 +4,16 @@
     - collection.articles.each do |article|
       - if graph_id == article.graph_id
         %li.active
-          .list--details= sanitize(article.article_title)
+          .card
+            .card__details
+              = sanitize(article.article_title)
       - else
         %li
-          .list--details
-            = link_to(sanitize(article.article_title), article_path(article.graph_id))
+          .card
+            .card__details
+              = link_to(sanitize(article.article_title), article_path(article.graph_id))
     - collection.subcollections.each do |subcollection|
       %li
-        .list--details
-          = link_to(sanitize(subcollection.name), collection_path(subcollection.graph_id))
+        .card
+          .card__details
+            = link_to(sanitize(subcollection.name), collection_path(subcollection.graph_id))
