--- a/app/views/shared/article/_footer.html.haml
+++ b/app/views/shared/article/_footer.html.haml
@@ -7,7 +7,8 @@
   %ul.list--inline
     // Print button
     %li.visually-hidden{ aria: { hidden: 'true' } }
-      .list--details
-        = render partial: 'pugin/icons/print'
-        %a.btn--print{ href: '#' }
-          = t('print').capitalize
+      .card
+        .card__details
+          = render partial: 'pugin/icons/print'
+          %a.btn--print{ href: '#' }
+            = t('print').capitalize
