--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -1,7 +1,7 @@
 .section--primary
   .container
     %h1= title("#{t('.question').capitalize} #{@question.uin}")
-    %p.lead= "#{t('.question_for').capitalize} #{@answering_body.name}"
+    %p.lead= "#{t('.for').capitalize} #{@answering_body.name}"
 
 %section{ id: 'content', tabindex: '0' }
   .container
