--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -10,16 +10,14 @@
     -# Question
     .block--border__bottom
       %h2= t('.question').capitalize
-      = sanitize @question.text
       - role = @asking_person_seat_incumbency.house_of_lords? ? "#{t('.member_of').capitalize} #{t('house_of_lords')}" : "#{t('.mp_for')} #{@constituency.name}"
-      = render partial: 'person_details', locals: { person: @asking_person, role: role, incumbency: @asking_person_seat_incumbency, submitted_on: "#{t('.asked_on').capitalize} #{@question.asked_at_date.strftime('%d %B %Y')} #{t('.by')}" }
+      = render partial: 'person_details', locals: { body: @question.text, person: @asking_person, role: role, incumbency: @asking_person_seat_incumbency, submitted_on: "#{t('.asked_on').capitalize} #{@question.asked_at_date.strftime('%d %B %Y')} #{t('.by')}" }
 
     -# Answer
     .block--border__bottom
       %h2= t('.answer').capitalize
       - if @answer.present?
-        = sanitize @answer_text
-        = render partial: 'person_details', locals: { person: @answering_person, role: "#{@government_position.name}", incumbency: @answering_person_government_incumbency, submitted_on: "#{t('.answered_on').capitalize} #{@answer.answer_given_date.strftime('%d %B %Y')} #{t('.by')}" }
+        = render partial: 'person_details', locals: { body: @answer_text, person: @answering_person, role: "#{@government_position.name}", incumbency: @answering_person_government_incumbency, submitted_on: "#{t('.answered_on').capitalize} #{@answer.answer_given_date.strftime('%d %B %Y')} #{t('.by')}" }
       - else
-        .status--highlight.theme--purple--light
+        .status--highlight
           = t('.not_answered').capitalize
