--- a/app/views/work_packages/show.html.haml
+++ b/app/views/work_packages/show.html.haml
@@ -1,30 +1,34 @@
+- page_title = title(@work_packageable_thing.name)
+
 .section--primary#content{ tabindex: "0" }
   .container
-    %h1= title(@work_packageable_thing.name)
+    %h1= page_title
 
     %ul
       %li
-        = 'This is a'
-        = link_to("#{@procedure.name.downcase}", procedure_path(@procedure.graph_id))
-        = 'work package'
+        = t('.this_is').capitalize
+        = @procedure.name.downcase
+        = t('.work_package')
+
+      %li= link_to("#{t('.view_all').capitalize} #{@procedure.name.downcase} #{t('.work_package').pluralize}", procedure_path(@procedure.graph_id))
 
       - unless @work_packageable_thing.weblink.empty?
         = link_to(@work_packageable_thing.weblink) do
-          %li= "Read the related information"
+          %li= t('.related_information')
 
     - if @completed_business_items.any?
-      %h2= 'Completed steps'
+      %h2= t('.completed_stages')
       .track--alternative
         - @completed_business_items.each do |completed_business_item|
           = render partial: 'work_packages/business_item', locals: { business_item: completed_business_item }
 
+    - if @business_items_with_no_date.any?
+      %h2= t('.completed_stages_no_date')
+      - @business_items_with_no_date.each do |business_item_with_no_date|
+        = render partial: 'work_packages/business_item', locals: { business_item: business_item_with_no_date }
+
     - if @scheduled_business_items.any?
-      %h2= 'Scheduled steps'
+      %h2= t('.scheduled_stages')
       .track--alternative
         - @scheduled_business_items.each do |scheduled_business_item|
           = render partial: 'work_packages/business_item', locals: { business_item: scheduled_business_item }
-
-    - if @business_items_with_no_date.any?
-      %h2= 'Completed steps with no date'
-      - @business_items_with_no_date.each do |business_item_with_no_date|
-        = render partial: 'work_packages/business_item', locals: { business_item: business_item_with_no_date }
