--- a/app/views/procedures/show.html.haml
+++ b/app/views/procedures/show.html.haml
@@ -1,23 +1,25 @@
-- page_title = title("#{@procedure.name.downcase.capitalize} #{t('.work_package').pluralize}")
+- page_title = title("#{@procedure.name.downcase.capitalize}")
 
 .section--primary#content{ tabindex: "0" }
   .container
     %h1= page_title
-    %p= t('.list_ordering_description')
     %p
       = t('.find_out_more')
       = succeed "." do
         = link_to("#{@procedure.name.downcase} #{t('.procedure')}", 'https://www.parliament.uk/about/how/laws/delegated/').html_safe
 
+    %h2= t('.work_package').pluralize.capitalize
+    %p= t('.list_ordering_description')
+
     - if @work_packages.none?
-      = t('no_content.empty_list.no_results')
+      %ul.list--block
+        %li= t('no_content.empty_list.no_results')
 
     - else
       %ol.list--block
         - @work_packages.each do |work_package|
           %li
-            .card
-              .card__details
-                %h2= link_to(work_package.work_packageable_thing_name, work_package_path(work_package.graph_id))
-                - if work_package.oldest_business_item_date
-                  %p= "#{l(work_package.oldest_business_item_date, format: :default)}"
+            .card__details
+              %h2= link_to(work_package.work_packageable_thing_name, work_package_path(work_package.graph_id))
+              - if work_package.oldest_business_item_date
+                %p= "#{l(work_package.oldest_business_item_date, format: :default)}"
