--- a/app/views/work_packages/_completed_business_item.html.haml
+++ b/app/views/work_packages/_completed_business_item.html.haml
@@ -4,25 +4,25 @@
     - if business_item_node.sorted_procedure_steps_by_distance.any? || !business_item_node.weblink.empty?
       %ul.list--block
         %li
-          .list--details
+          .card__details
             - business_item_node.sorted_procedure_steps_by_distance.each do |procedure_step|
               %p
                 - procedure_step.houses.each do |house|
                   %span.hint= house.name
                 = procedure_step.name
             - unless business_item_node.weblink.empty?
-              %p= link_to t('.find_out_more_stage'), "#{business_item_node.weblink}"
+              %p= link_to t('work_packages.find_out_more_stage'), "#{business_item_node.weblink}"
 
 - else
   %h3= "#{l(business_item.date, format: :default)}"
   - if business_item.sorted_procedure_steps_by_distance.any? || !business_item.weblink.empty?
     %ul.list--block
       %li
-        .list--details
+        .card__details
           - business_item.sorted_procedure_steps_by_distance.each do |procedure_step|
             %p
               - procedure_step.houses.each do |house|
                 %span.hint= house.name
               = procedure_step.name
           - unless business_item.weblink.empty?
-            %p= link_to t('.find_out_more_stage'), "#{business_item.weblink}"
+            %p= link_to t('work_packages.find_out_more_stage'), "#{business_item.weblink}"
