--- a/app/views/work_packages/_no_date_business_item.html.haml
+++ b/app/views/work_packages/_no_date_business_item.html.haml
@@ -1,10 +1,10 @@
 - if business_item.sorted_procedure_steps_by_distance.any? || !business_item.weblink.empty?
-  %ul.list--block
-    - business_item.sorted_procedure_steps_by_distance.each do |procedure_step|
-      %p
-        - procedure_step.houses.each do |house|
-          %span.hint= house.name
-        = procedure_step.name
-    - unless business_item.weblink.empty?
-      %a{ href: "#{business_item.weblink}" }
-        = 'Find out more about this stage'
+  %li
+    .card__details
+      - business_item.sorted_procedure_steps_by_distance.each do |procedure_step|
+        %p
+          - procedure_step.houses.each do |house|
+            %span.hint= house.name
+          = procedure_step.name
+      - unless business_item.weblink.empty?
+        %p= link_to t('work_packages.find_out_more_stage'), "#{business_item.weblink}"
