[SI] Updates to procedure and work package show views

--- a/app/views/procedures/show.html.haml
+++ b/app/views/procedures/show.html.haml
@@ -1,4 +1,4 @@
-- page_title = title("#{@procedure.name.downcase.capitalize}")
+- page_title = title("#{@procedure.name.downcase.capitalize} #{t('.procedure')}")
 
 .section--primary#content{ tabindex: "0" }
   .container
