--- a/app/views/work_packages/show.html.haml
+++ b/app/views/work_packages/show.html.haml
@@ -29,6 +29,7 @@
   %section.section--wide
     .container
       %h2= t('.completed_stages_no_date')
+      %p= t('.completed_stages_no_date_description')
       %ul.list--block
         - @business_items_with_no_date.each do |business_item_with_no_date|
           = render partial: 'work_packages/no_date_business_item', locals: { business_item: business_item_with_no_date }
