--- a/app/views/work_packages/_scheduled_business_item.html.haml
+++ b/app/views/work_packages/_scheduled_business_item.html.haml
@@ -1,12 +1,13 @@
 %li
-  .card__details
-    %h3= "#{l(business_item.date, format: :default)}"
+  .card
+    .card__details
+      %h3= "#{l(business_item.date, format: :default)}"
 
-    - if business_item.sorted_procedure_steps_by_distance.any? || !business_item.weblink.empty?
-      - business_item.sorted_procedure_steps_by_distance.each do |procedure_step|
-        %p
-          - procedure_step.houses.each do |house|
-            %span.hint= house.name
-          = procedure_step.name
-      - unless business_item.weblink.empty?
-        %p= link_to t('work_packages.find_out_more_stage'), "#{business_item.weblink}"
+      - if business_item.sorted_procedure_steps_by_distance.any? || !business_item.weblink.empty?
+        - business_item.sorted_procedure_steps_by_distance.each do |procedure_step|
+          %p
+            - procedure_step.houses.each do |house|
+              %span.hint= house.name
+            = procedure_step.name
+        - unless business_item.weblink.empty?
+          %p= link_to t('work_packages.find_out_more_stage'), "#{business_item.weblink}"
